--- a/css/style.css
+++ b/css/style.css
@@ -730,7 +730,7 @@ progress {
 .container-lg,
 .container-md,
 .container-sm {
-  --bs-gutter-x: 2.875rem;
+  --bs-gutter-x: 3rem;
   --bs-gutter-y: 0;
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
@@ -774,7 +774,7 @@ progress {
 }
 
 .row {
-  --bs-gutter-x: 2.875rem;
+  --bs-gutter-x: 3rem;
   --bs-gutter-y: 0;
   display: flex;
   flex-wrap: wrap;
@@ -2884,8 +2884,8 @@ textarea.form-control-lg {
 }
 
 .btn {
-  --bs-btn-padding-x: 1.75rem;
-  --bs-btn-padding-y: 0.875rem;
+  --bs-btn-padding-x: 1.875rem;
+  --bs-btn-padding-y: 0.9375rem;
   --bs-btn-font-family: ;
   --bs-btn-font-size: 0.875rem;
   --bs-btn-font-weight: 400;
@@ -2894,7 +2894,7 @@ textarea.form-control-lg {
   --bs-btn-bg: transparent;
   --bs-btn-border-width: var(--bs-border-width);
   --bs-btn-border-color: transparent;
-  --bs-btn-border-radius: calc(calc(1.28571429em + 1.75rem + calc(var(--bs-border-width) * 2)) * 2);
+  --bs-btn-border-radius: calc(calc(1.28571429em + 1.875rem + calc(var(--bs-border-width) * 2)) * 2);
   --bs-btn-hover-border-color: transparent;
   --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   --bs-btn-disabled-opacity: 0.65;
@@ -3660,7 +3660,7 @@ textarea.form-control-lg {
 }
 
 .btn-group {
-  border-radius: calc(calc(1.28571429em + 1.75rem + calc(var(--bs-border-width) * 2)) * 2);
+  border-radius: calc(calc(1.28571429em + 1.875rem + calc(var(--bs-border-width) * 2)) * 2);
 }
 .btn-group > :not(.btn-check:first-child) + .btn,
 .btn-group > .btn-group:not(:first-child) {
@@ -3680,8 +3680,8 @@ textarea.form-control-lg {
 }
 
 .dropdown-toggle-split {
-  padding-right: 1.3125rem;
-  padding-left: 1.3125rem;
+  padding-right: 1.40625rem;
+  padding-left: 1.40625rem;
 }
 .dropdown-toggle-split::after, .dropup .dropdown-toggle-split::after, .dropend .dropdown-toggle-split::after {
   margin-left: 0;
@@ -3877,7 +3877,7 @@ textarea.form-control-lg {
   --bs-navbar-toggler-font-size: 1.25rem;
   --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2833, 37, 41, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
   --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0.15);
-  --bs-navbar-toggler-border-radius: calc(calc(1.28571429em + 1.75rem + calc(var(--bs-border-width) * 2)) * 2);
+  --bs-navbar-toggler-border-radius: calc(calc(1.28571429em + 1.875rem + calc(var(--bs-border-width) * 2)) * 2);
   --bs-navbar-toggler-focus-width: 0.25rem;
   --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
   position: relative;
@@ -4305,7 +4305,7 @@ textarea.form-control-lg {
   --bs-card-color: ;
   --bs-card-bg: var(--bs-body-bg);
   --bs-card-img-overlay-padding: 1rem;
-  --bs-card-group-margin: 1.4375rem;
+  --bs-card-group-margin: 1.5rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -5311,7 +5311,7 @@ textarea.form-control-lg {
   --bs-toast-zindex: 1090;
   --bs-toast-padding-x: 0.75rem;
   --bs-toast-padding-y: 0.5rem;
-  --bs-toast-spacing: 2.875rem;
+  --bs-toast-spacing: 3rem;
   --bs-toast-max-width: 350px;
   --bs-toast-font-size: 0.875rem;
   --bs-toast-color: ;
